reintroduce background image; fixed on mobile

--- a/source/css/partials/_content.sass
+++ b/source/css/partials/_content.sass
@@ -12,6 +12,12 @@ main
 
     +media($tablet)
       background: none
+      margin-bottom: 0%
+      margin-top: 120px
+
+    h2
+      +media($tablet)
+        display: none
 
   #screen_image
     position: relative
